Export extractModelParameters and re-run roxygen2.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@ export(cd)
 export(compareModels)
 export(createModels)
 export(createSyntax)
+export(extractModelParameters)
 export(extractModelSummaries)
 export(getSavedata_Bparams)
 export(getSavedata_Data)
@@ -16,8 +17,8 @@ export(mplusRcov)
 export(paramExtract)
 export(parseMplus)
 export(readModels)
-export(runModels)
 export(runModels_Interactive)
+export(runModels)
 export(showSummaryTable)
 export(testBParamCompoundConstraint)
 export(testBParamConstraint)
