--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ export(mplusObject)
 export(mplusRcov)
 export(paramExtract)
 export(parseMplus)
+export(prepareMplusData)
 export(readModels)
 export(runModels_Interactive)
 export(runModels)
