fixed one more missing export statement

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(createModels)
 export(createSyntax)
 export(extractModelParameters)
 export(extractModelSummaries)
+export(extractModIndices)
 export(getSavedata_Bparams)
 export(getSavedata_Data)
 export(getSavedata_Fileinfo)
@@ -18,8 +19,8 @@ export(paramExtract)
 export(parseMplus)
 export(prepareMplusData)
 export(readModels)
-export(runModels_Interactive)
 export(runModels)
+export(runModels_Interactive)
 export(showSummaryTable)
 export(testBParamCompoundConstraint)
 export(testBParamConstraint)
