fixed some imports for xtable in summary functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -33,4 +33,5 @@ importFrom(plyr,l_ply)
 importFrom(plyr,rbind.fill)
 importFrom(plyr,rename)
 importFrom(relimp,showData)
+importFrom(xtable,xtable)
 S3method(update,mplusObject)
