tried to fix warnings about namespace overwrites and reroxygenized

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,10 +25,9 @@ export(showSummaryTable)
 export(testBParamCompoundConstraint)
 export(testBParamConstraint)
 import(coda)
-import(gsubfn)
-import(plyr)
 importFrom(boot,boot)
 importFrom(gsubfn,strapply)
+importFrom(plyr,a_ply)
 importFrom(plyr,l_ply)
 importFrom(plyr,rbind.fill)
 importFrom(plyr,rename)
