--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,10 +27,15 @@ export(testBParamConstraint)
 import(coda)
 importFrom(boot,boot)
 importFrom(gsubfn,strapply)
+importFrom(lattice,dotplot)
 importFrom(plyr,a_ply)
 importFrom(plyr,l_ply)
 importFrom(plyr,rbind.fill)
 importFrom(plyr,rename)
 importFrom(relimp,showData)
 importFrom(xtable,xtable)
+S3method(coef,mplusObject)
+S3method(plot,mplusObject)
+S3method(print,MplusRstructure)
+S3method(summary,mplusObject)
 S3method(update,mplusObject)
