A bit more housekeeping in preparation for 0.6 release.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -20,9 +20,10 @@ Imports:
     gsubfn,
     relimp,
     coda,
-    xtable
+    xtable,
+    lattice
 Suggests:
-    hdf5
+    rhdf5
 LazyLoad: yes
 Collate:
     'compareModels.R'
