adding imports in documentation and updated namespace

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,7 +29,9 @@ importFrom(boot,boot)
 importFrom(gsubfn,strapply)
 importFrom(lattice,dotplot)
 importFrom(plyr,a_ply)
+importFrom(plyr,ddply)
 importFrom(plyr,l_ply)
+importFrom(plyr,ldply)
 importFrom(plyr,rbind.fill)
 importFrom(plyr,rename)
 importFrom(relimp,showData)
