incremented version number and imported tcltk

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,7 @@ export(showSummaryTable)
 export(testBParamCompoundConstraint)
 export(testBParamConstraint)
 import(coda)
+import(tcltk)
 importFrom(boot,boot)
 importFrom(gsubfn,strapply)
 importFrom(lattice,dotplot)
