--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: MplusAutomation
 Type: Package
 Title: Automating Mplus Model Estimation and Interpretation
-Version: 0.6
-Date: 2013-05-03
+Version: 0.6-1
+Date: 2013-05-07
 Author: Michael Hallquist, Joshua Wiley
 Maintainer: Michael Hallquist <michael.hallquist@gmail.com>
 Description: The MplusAutomation package leverages the flexibility of the R
@@ -17,6 +17,7 @@ Depends:
     plyr,
     boot
 Imports:
+    tcltk,
     gsubfn,
     relimp,
     coda,
