--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: MplusAutomation
 Type: Package
 Title: Automating Mplus Model Estimation and Interpretation
-Version: 0.6-1
-Date: 2013-05-07
+Version: 0.6-2
+Date: 2013-10-24
 Author: Michael Hallquist, Joshua Wiley
 Maintainer: Michael Hallquist <michael.hallquist@gmail.com>
 Description: The MplusAutomation package leverages the flexibility of the R
@@ -28,7 +28,6 @@ LazyLoad: yes
 Collate:
     'compareModels.R'
     'createModels.R'
-    'extractAuxE.R'
     'extractModIndices.R'
     'extractParameters.R'
     'extractSaveData.R'
@@ -39,3 +38,4 @@ Collate:
     'runModels.R'
     'utilityFunctions.R'
     'methods.R'
+    'extractAuxDis.R'
