re roxygenized, note it seems to add some uneeded arguments (dots) to the S4 methods docs so these are manually edited out of extract.mplus.model

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,13 +13,15 @@ Description: The MplusAutomation package leverages the flexibility of the R
     models, and extracting and tabulating model parameters and fit statistics.
 License: LGPL-3
 Depends:
+    methods,
     plyr,
     boot
 Imports:
     gsubfn,
     coda,
     xtable,
-    lattice
+    lattice,
+    texreg
 Suggests:
     rhdf5,
     tcltk,
