updated documentation, changed more depends into imports to fit with more recent R ways of doing things

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(compareModels)
 export(createModels)
 export(createSyntax)
 export(extract.mplus.model)
+export(extract.mplusObject)
 export(extractModIndices)
 export(extractModelParameters)
 export(extractModelSummaries)
@@ -33,17 +34,13 @@ export(runModels_Interactive)
 export(showSummaryTable)
 export(testBParamCompoundConstraint)
 export(testBParamConstraint)
+exportMethods(extract)
+import(boot)
 import(coda)
 import(methods)
+import(plyr)
 import(tcltk)
 import(texreg)
-importFrom(boot,boot)
 importFrom(gsubfn,strapply)
 importFrom(lattice,dotplot)
-importFrom(plyr,a_ply)
-importFrom(plyr,ddply)
-importFrom(plyr,l_ply)
-importFrom(plyr,ldply)
-importFrom(plyr,rbind.fill)
-importFrom(plyr,rename)
 importFrom(xtable,xtable)
