Various bugfixes and features for version 0.6-4

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -41,7 +41,15 @@ import(coda)
 import(methods)
 import(plyr)
 import(texreg)
+importFrom(graphics,lines)
+importFrom(graphics,par)
+importFrom(graphics,plot)
 importFrom(gsubfn,strapply)
 importFrom(lattice,dotplot)
 importFrom(pander,pander)
+importFrom(stats,pchisq)
+importFrom(stats,reshape)
+importFrom(utils,read.fwf)
+importFrom(utils,read.table)
+importFrom(utils,write.table)
 importFrom(xtable,xtable)
