Small tweaks for CRAN compliance in v0.6-4.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,10 +8,9 @@ Authors@R: c(person("Michael", "Hallquist", role = c("aut", "cre"),
     person("Joshua", "Wiley", role = "aut",
     email = "jwiley.psych@gmail.com"))
 Maintainer: Michael Hallquist <michael.hallquist@gmail.com>
-Description: The MplusAutomation package leverages the flexibility of the R
-    language to automate latent variable model estimation and interpretation
-    using Mplus, a powerful latent variable modeling program developed by
-    Muthen and Muthen (www.statmodel.com). Specifically, MplusAutomation
+Description: Leverages the R language to automate latent variable model estimation
+	and interpretation using Mplus, a powerful latent variable modeling program 
+	developed by Muthen and Muthen (www.statmodel.com). Specifically, this package
     provides routines for creating related groups of models, running batches of
     models, and extracting and tabulating model parameters and fit statistics.
 License: LGPL-3
