--- a/NAMESPACE
+++ b/NAMESPACE
@@ -47,6 +47,7 @@ importFrom(graphics,plot)
 importFrom(gsubfn,strapply)
 importFrom(lattice,dotplot)
 importFrom(pander,pander)
+importFrom(stats,coef)
 importFrom(stats,pchisq)
 importFrom(stats,reshape)
 importFrom(utils,read.fwf)
