importing choose.dir from utils package to satisfy Rcmd check

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -50,6 +50,7 @@ importFrom(pander,pander)
 importFrom(stats,coef)
 importFrom(stats,pchisq)
 importFrom(stats,reshape)
+importFrom(utils,choose.dir)
 importFrom(utils,read.fwf)
 importFrom(utils,read.table)
 importFrom(utils,write.table)
