minor updates and re-roxygenized

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -41,6 +41,7 @@ import(coda)
 import(methods)
 import(plyr)
 import(texreg)
+importFrom(digest,digest)
 importFrom(graphics,lines)
 importFrom(graphics,par)
 importFrom(graphics,plot)
