Small updates to news and .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,7 @@ README.html
 
 # The devtools zip is downloaded when the package is updating itself.  If it's not deleted, there's no reason to commit it to the repository.
 devtools.zip
+
+pkg_build
+local
+products
