added support to format Mplus confidence intervals and for texreg

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,8 @@
 
 S3method(coef,mplus.model)
 S3method(coef,mplusObject)
+S3method(confint,mplus.model)
+S3method(confint,mplusObject)
 S3method(plot,mplusObject)
 S3method(print,MplusRstructure)
 S3method(summary,mplusObject)
@@ -49,6 +51,7 @@ importFrom(gsubfn,strapply)
 importFrom(lattice,dotplot)
 importFrom(pander,pander)
 importFrom(stats,coef)
+importFrom(stats,confint)
 importFrom(stats,pchisq)
 importFrom(stats,reshape)
 importFrom(utils,read.fwf)
