re-roxygenized and updated NEWS

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(cd)
 export(compareModels)
 export(createModels)
 export(createSyntax)
+export(detectVariables)
 export(extract.mplus.model)
 export(extract.mplusObject)
 export(extractModIndices)
@@ -23,6 +24,7 @@ export(extractModelSummaries)
 export(getSavedata_Bparams)
 export(getSavedata_Data)
 export(getSavedata_Fileinfo)
+export(long2LGMM)
 export(lookupTech1Parameter)
 export(mplus.traceplot)
 export(mplusModeler)
@@ -37,9 +39,11 @@ export(runModels_Interactive)
 export(showSummaryTable)
 export(testBParamCompoundConstraint)
 export(testBParamConstraint)
+export(trainLGMM)
 exportMethods(extract)
 import(boot)
 import(coda)
+import(data.table)
 import(methods)
 import(plyr)
 import(texreg)
