added imports from parallel package to trainLGMM and updated docs

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -53,6 +53,11 @@ importFrom(graphics,plot)
 importFrom(gsubfn,strapply)
 importFrom(lattice,dotplot)
 importFrom(pander,pander)
+importFrom(parallel,clusterEvalQ)
+importFrom(parallel,clusterExport)
+importFrom(parallel,makeCluster)
+importFrom(parallel,parLapplyLB)
+importFrom(parallel,stopCluster)
 importFrom(stats,coef)
 importFrom(stats,confint)
 importFrom(stats,pchisq)
