documented additional utility functions and updated Rd docs

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -31,6 +31,7 @@ export(mplusModeler)
 export(mplusObject)
 export(mplusRcov)
 export(paramExtract)
+export(parseCatOutput)
 export(parseMplus)
 export(prepareMplusData)
 export(readModels)
@@ -60,6 +61,7 @@ importFrom(parallel,parLapplyLB)
 importFrom(parallel,stopCluster)
 importFrom(stats,coef)
 importFrom(stats,confint)
+importFrom(stats,na.omit)
 importFrom(stats,pchisq)
 importFrom(stats,reshape)
 importFrom(utils,read.fwf)
