New local_tmpdir for runModels; tweak lookupTech1Parameters; deprecate extractModelSummaries and extractModelParameters; finished version of Monte Carlo example

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: MplusAutomation
 Type: Package
-Title: Automating Mplus Model Estimation and Interpretation
-Version: 0.7
-Date: 2017-07-12
+Title: An R Package for Facilitating Large-Scale Latent Variable Analyses in Mplus
+Version: 0.7-1
+Date: 2017-11-06
 Authors@R: c(person("Michael", "Hallquist", role = c("aut", "cre"),
     email = "michael.hallquist@gmail.com"),
     person("Joshua", "Wiley", role = "aut",
