--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(LatexSummaryTable)
 export(SummaryTable)
 export(cd)
 export(compareModels)
+export(createMixtures)
 export(createModels)
 export(createSyntax)
 export(detectVariables)
@@ -26,6 +27,7 @@ export(getSavedata_Data)
 export(getSavedata_Fileinfo)
 export(long2LGMM)
 export(lookupTech1Parameter)
+export(mixtureSummaryTable)
 export(mplus.traceplot)
 export(mplusModeler)
 export(mplusObject)
@@ -33,6 +35,9 @@ export(mplusRcov)
 export(paramExtract)
 export(parseCatOutput)
 export(parseMplus)
+export(plotGrowthMixtures)
+export(plotMixtureDensities)
+export(plotMixtures)
 export(prepareMplusData)
 export(readModels)
 export(runModels)
@@ -44,6 +49,7 @@ export(trainLGMM)
 exportMethods(extract)
 import(boot)
 import(coda)
+import(ggplot2)
 import(methods)
 import(plyr)
 import(texreg)
