--- a/NAMESPACE
+++ b/NAMESPACE
@@ -36,6 +36,7 @@ export(paramExtract)
 export(parseCatOutput)
 export(parseMplus)
 export(plotGrowthMixtures)
+export(plotLTA)
 export(plotMixtureDensities)
 export(plotMixtures)
 export(prepareMplusData)
@@ -66,10 +67,12 @@ importFrom(parallel,makeCluster)
 importFrom(parallel,parLapplyLB)
 importFrom(parallel,stopCluster)
 importFrom(stats,coef)
+importFrom(stats,complete.cases)
 importFrom(stats,confint)
 importFrom(stats,na.omit)
 importFrom(stats,pchisq)
 importFrom(stats,reshape)
+importFrom(stats,setNames)
 importFrom(utils,packageDescription)
 importFrom(utils,read.fwf)
 importFrom(utils,read.table)
