--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,6 +29,7 @@ export(long2LGMM)
 export(lookupTech1Parameter)
 export(mixtureSummaryTable)
 export(mplus.traceplot)
+export(mplusAvailable)
 export(mplusModeler)
 export(mplusObject)
 export(mplusRcov)
