Fix for pppp psr

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -30,6 +30,7 @@ export(lookupTech1Parameter)
 export(mixtureSummaryTable)
 export(mplus.traceplot)
 export(mplusAvailable)
+export(mplusGLM)
 export(mplusModeler)
 export(mplusObject)
 export(mplusRcov)
