--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,9 @@ S3method(confint,mplus.model)
 S3method(confint,mplusObject)
 S3method(plot,mplusObject)
 S3method(print,MplusRstructure)
+S3method(print,mplus.model)
+S3method(print,mplusObject)
+S3method(summary,mplus.model)
 S3method(summary,mplusObject)
 S3method(update,mplusObject)
 export(HTMLSummaryTable)
