--- a/NAMESPACE
+++ b/NAMESPACE
@@ -77,12 +77,16 @@ importFrom(rlang,flatten)
 importFrom(stats,coef)
 importFrom(stats,complete.cases)
 importFrom(stats,confint)
+importFrom(stats,get_all_vars)
+importFrom(stats,model.matrix)
 importFrom(stats,na.omit)
 importFrom(stats,pchisq)
 importFrom(stats,reshape)
 importFrom(stats,setNames)
+importFrom(stats,update)
 importFrom(utils,packageDescription)
 importFrom(utils,read.fwf)
 importFrom(utils,read.table)
+importFrom(utils,tail)
 importFrom(utils,write.table)
 importFrom(xtable,xtable)
