Small tweaks for CRAN checks to pass

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -59,6 +59,8 @@ import(ggplot2)
 import(methods)
 import(plyr)
 import(texreg)
+importFrom(data.table,":=")
+importFrom(data.table,as.data.table)
 importFrom(data.table,fwrite)
 importFrom(data.table,is.data.table)
 importFrom(digest,digest)
