--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -23,6 +23,7 @@ URL: https://github.com/michaelhallquist/MplusAutomation
 Depends:
     R (>= 3.5.0),
     methods
+biocViews:
 Imports:
     utils,
     boot,
