added knitr as the vignettebuilder and to suggests to pass checks

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -43,8 +43,10 @@ Suggests:
     rhdf5,
     tcltk,
     relimp,
+    knitr,
     testthat
 LazyLoad: yes
 LazyData: yes
+VignetteBuilder: knitr
 RoxygenNote: 7.1.1
 Encoding: UTF-8
