--- a/NAMESPACE
+++ b/NAMESPACE
@@ -59,11 +59,17 @@ import(ggplot2)
 import(methods)
 import(plyr)
 import(texreg)
+importFrom(checkmate,assert_character)
+importFrom(checkmate,assert_data_frame)
+importFrom(checkmate,assert_logical)
+importFrom(checkmate,assert_string)
+importFrom(checkmate,assert_subset)
 importFrom(data.table,":=")
 importFrom(data.table,as.data.table)
 importFrom(data.table,fwrite)
 importFrom(data.table,is.data.table)
 importFrom(digest,digest)
+importFrom(fastDummies,dummy_cols)
 importFrom(graphics,lines)
 importFrom(graphics,par)
 importFrom(graphics,plot)
