Add methods for mixturesummarytable and parse arguments for createMixtures

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,9 @@ S3method(coef,mplus.model)
 S3method(coef,mplusObject)
 S3method(confint,mplus.model)
 S3method(confint,mplusObject)
+S3method(mixtureSummaryTable,list)
+S3method(mixtureSummaryTable,model.list)
+S3method(mixtureSummaryTable,mplus.model)
 S3method(plot,mplusObject)
 S3method(print,MplusRstructure)
 S3method(print,mplus.model)
