update mixture functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,9 +4,6 @@ S3method(coef,mplus.model)
 S3method(coef,mplusObject)
 S3method(confint,mplus.model)
 S3method(confint,mplusObject)
-S3method(mixtureSummaryTable,list)
-S3method(mixtureSummaryTable,model.list)
-S3method(mixtureSummaryTable,mplus.model)
 S3method(plot,mplusObject)
 S3method(print,MplusRstructure)
 S3method(print,mplus.model)
@@ -88,6 +85,7 @@ importFrom(rlang,flatten)
 importFrom(stats,coef)
 importFrom(stats,complete.cases)
 importFrom(stats,confint)
+importFrom(stats,density)
 importFrom(stats,get_all_vars)
 importFrom(stats,model.matrix)
 importFrom(stats,na.omit)
