--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -46,7 +46,8 @@ Suggests:
     tcltk,
     relimp,
     knitr,
-    testthat
+    testthat,
+    rmarkdown
 LazyLoad: yes
 LazyData: yes
 VignetteBuilder: knitr
