--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ S3method(confint,mplus.model)
 S3method(confint,mplusObject)
 S3method(plot,mplusObject)
 S3method(print,MplusRstructure)
+S3method(print,mixture.list)
 S3method(print,mplus.model)
 S3method(print,mplusObject)
 S3method(summary,mplus.model)
