--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,7 +15,7 @@ Authors@R: c(person("Michael", "Hallquist", role = c("aut", "cre"),
 Maintainer: Michael Hallquist <michael.hallquist@gmail.com>
 Description: Leverages the R language to automate latent variable model estimation
 	and interpretation using 'Mplus', a powerful latent variable modeling program
-	developed by Muthen and Muthen (<http://www.statmodel.com>). Specifically, this package
+	developed by Muthen and Muthen (<https://www.statmodel.com>). Specifically, this package
     provides routines for creating related groups of models, running batches of
     models, and extracting and tabulating model parameters and fit statistics.
 License: LGPL-3
