added some initial rough unit tests reading user guide outputs

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -46,10 +46,11 @@ Suggests:
     tcltk,
     relimp,
     knitr,
-    testthat,
+    testthat (>= 3.0.0),
     rmarkdown
 LazyLoad: yes
 LazyData: yes
 VignetteBuilder: knitr
 RoxygenNote: 7.1.1
 Encoding: UTF-8
+Config/testthat/edition: 3
