add utility to detect OS and Mplus command more robustly + news

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,7 @@ export(compareModels)
 export(createMixtures)
 export(createModels)
 export(createSyntax)
+export(detectMplus)
 export(detectVariables)
 export(extract.mplus.model)
 export(extract.mplusObject)
