--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -19,7 +19,8 @@ Description: Leverages the R language to automate latent variable model estimati
     provides routines for creating related groups of models, running batches of
     models, and extracting and tabulating model parameters and fit statistics.
 License: LGPL-3
-URL: https://github.com/michaelhallquist/MplusAutomation
+URL: https://michaelhallquist.github.io/MplusAutomation/
+BugReports: https://github.com/michaelhallquist/MplusAutomation/issues
 Depends:
     R (>= 3.5.0),
     methods
