Improved TECH10 parsing to extract number of significant residuals
This value was introduced in a recent Mplus version. This should also be
a more efficient implementation, as it doesn't rely on a for loop.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -41,7 +41,8 @@ Imports:
     data.table,
     rlang,
     fastDummies,
-    checkmate
+    checkmate,
+    reshape2
 Suggests:
     rhdf5,
     tcltk,
