--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,6 +24,7 @@ export(detectMplus)
 export(detectVariables)
 export(extract.mplus.model)
 export(extract.mplusObject)
+export(extractEFAparameters)
 export(extractModIndices)
 export(extractModelParameters)
 export(extractModelSummaries)
