--- a/NAMESPACE
+++ b/NAMESPACE
@@ -72,6 +72,7 @@ export(readModels)
 export(runModels)
 export(runModels_Interactive)
 export(showSummaryTable)
+export(submitModels)
 export(testBParamCompoundConstraint)
 export(testBParamConstraint)
 export(trainLGMM)
