Draft of submiModels for testing on slurm

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ S3method(print,mplus.model)
 S3method(print,mplusObject)
 S3method(summary,mplus.model)
 S3method(summary,mplusObject)
+S3method(summary,mplus_submission_df)
 S3method(update,mplusObject)
 export(HTMLSummaryTable)
 export(LatexSummaryTable)
@@ -90,8 +91,10 @@ importFrom(checkmate,assert_string)
 importFrom(checkmate,assert_subset)
 importFrom(data.table,":=")
 importFrom(data.table,as.data.table)
+importFrom(data.table,fread)
 importFrom(data.table,fwrite)
 importFrom(data.table,is.data.table)
+importFrom(data.table,setnames)
 importFrom(digest,digest)
 importFrom(fastDummies,dummy_cols)
 importFrom(graphics,lines)
