--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ export(HTMLSummaryTable)
 export(LatexSummaryTable)
 export(SummaryTable)
 export(cd)
+export(checkSubmission)
 export(compareModels)
 export(createMixtures)
 export(createModels)
@@ -94,6 +95,7 @@ importFrom(data.table,as.data.table)
 importFrom(data.table,fread)
 importFrom(data.table,fwrite)
 importFrom(data.table,is.data.table)
+importFrom(data.table,setDF)
 importFrom(data.table,setnames)
 importFrom(digest,digest)
 importFrom(fastDummies,dummy_cols)
