Support for odds ratios and their confidence intervals in logistic and multinomial models

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -121,7 +121,9 @@ importFrom(stats,pchisq)
 importFrom(stats,reshape)
 importFrom(stats,setNames)
 importFrom(stats,update)
+importFrom(utils,head)
 importFrom(utils,packageDescription)
 importFrom(utils,tail)
+importFrom(utils,type.convert)
 importFrom(utils,write.table)
 importFrom(xtable,xtable)
