Draft of mplusModel for testing on HPC

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -59,6 +59,7 @@ export(mixtureSummaryTable)
 export(mplus.traceplot)
 export(mplusAvailable)
 export(mplusGLM)
+export(mplusModel)
 export(mplusModeler)
 export(mplusObject)
 export(mplusRcov)
