Clean up submitModels documentation, avoid dplyr dependency

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -92,6 +92,7 @@ importFrom(checkmate,assert_string)
 importFrom(checkmate,assert_subset)
 importFrom(data.table,":=")
 importFrom(data.table,as.data.table)
+importFrom(data.table,data.table)
 importFrom(data.table,fread)
 importFrom(data.table,fwrite)
 importFrom(data.table,is.data.table)
