New variable parser; fixes to paths for mplusModel; GPT-generated draft of mplusModel vignette

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ S3method(print,mplusObject)
 S3method(summary,mplus.model)
 S3method(summary,mplusObject)
 S3method(summary,mplus_submission_df)
+S3method(update,mplusModel_r6)
 S3method(update,mplusObject)
 export(HTMLSummaryTable)
 export(LatexSummaryTable)
